<resources>
    <string name="app_name">Seed Identifier</string>
    <string name="enter_your_password">Enter your Password</string>
    <string name="enter_your_email">Enter your Email</string>
    <string name="please_enter_your_username_and_password">Please enter your Email and Password.</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">SIGN UP</string>
    <string name="confirm">Confirm</string>
    <string name="enter_password">Enter Password</string>
    <string name="enter_username">Enter Username</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="back">Back</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="about">About</string>
    <string name="take_picture">Take Picture</string>
    <string name="add">Add</string>
    <string name="use_camera">Use Camera</string>
    <string name="pick_from_gallery">Pick from gallery</string>
    <string name="incorrect_email_or_password">Incorrect Email or Password</string>
    <string name="seed_identifier">Seed Identifier</string>
    <string name="enter_email_address">Enter Email Address</string>
    <string name="the_app_uses_tensorflow_lite_to_identify_seeds_using_machine_learning_and_real_time_image_recognition_n_its_is_a_lightweight_machine_learning_model_specializing_in_keeping_operations_on_the_device_rather_than_offloading_the_image_processing_to_a_server_network_n_instead_tensorflow_lite_allows_us_to_create_a_neural_network_for_our_app_that_can_recognize_images_almost_instantly_n_currently_the_model_has_been_trained_on_100_images_each_of_three_separate_seeds_as_a_proof_of_concept_this_can_be_scalable_to_much_larger_datasets_for_an_exponentially_larger_number_of_seeds_while_the_model_per_tensorflow_s_design_will_not_grow_significantly_larger_than_a_megabyte_this_allows_for_both_regular_updates_modifications_and_additions_for_our_app_post_launch">The App uses TensorFlow Lite to identify seeds using machine learning and real time image recognition.\n Its is a lightweight machine learning model specializing in keeping operations on the device rather than offloading the image processing to a server network.\n Instead TensorFlow Lite allows us to create a neural network for our app that can recognize images almost instantly.\n Currently, the model has been trained on 100 images each of three separate seeds as a proof of concept. This can be scalable to much larger datasets for an exponentially larger number of seeds while the model, per TensorFlow’s design, will not grow significantly larger than a megabyte. This allows for both regular updates, modifications, and additions for our app post launch.</string>
</resources>