<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/EnterPassword"
        android:layout_width="521dp"
        android:layout_height="65dp"
        android:layout_marginBottom="136dp"
        android:autofillHints="Enter your Password"
        android:ems="10"
        android:fontFamily="sans-serif"
        android:hint="@string/enter_your_password"
        android:inputType="textPassword"
        android:textSize="48sp"
        app:layout_constraintBottom_toTopOf="@+id/loginOK"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/EnterUsername"
        android:layout_width="521dp"
        android:layout_height="65dp"
        android:layout_marginBottom="164dp"
        android:autofillHints="Enter your Username"
        android:ems="10"
        android:hint="@string/enter_your_username"
        android:inputType="textPassword"
        android:textSize="48sp"
        app:layout_constraintBottom_toTopOf="@+id/EnterPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.499"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="1280dp"
        android:layout_height="97dp"
        android:layout_marginBottom="151dp"
        android:text="@string/please_enter_your_username_and_password"
        android:textSize="65sp"
        app:layout_constraintBottom_toTopOf="@+id/EnterUsername"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.935" />

    <Button
        android:id="@+id/loginOK"
        android:layout_width="301dp"
        android:layout_height="101dp"
        android:background="@color/teal_700"
        android:text="@string/sign_in"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>